--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
 	</properties>
 
 	<dependencies>
+		<!--邮件发送-->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
